[add] pugのファイル群

--- a/src/pug/menu/index.pug
+++ b/src/pug/menu/index.pug
@@ -1,11 +1,11 @@
-extends ./_layout
+extends ../_layout
 
 block config
 
 block append head
 	link(rel="stylesheet" href=rootPath+"css/home/style.css")
-	include ./_config
-	title #{titles['home']}
+	include ../_config
+	title #{titles['menu']}
 
 block content
 	main content
