--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -4,4 +4,8 @@ body{
 	background: #ffffff;
 	font-family: 'Noto Sans JP', sans-serif;
 	font-size: $font-def;
+	.container, .container-fluid{
+		padding-left: 50px;
+		padding-right: 50px;
+	}
 }
