--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -41,7 +41,7 @@ main{
 			h2{
 				font-size: $font-h2;
 				text-align: center;
-				margin-bottom: $font-def;
+				margin-bottom: $margin-def;
 			}
 			ul{
 				li{
@@ -50,6 +50,7 @@ main{
 				li:not(.h3){
 					display: block;
 					ul{
+						padding-left: 1rem;
 						li{
 							display: block;
 							position: relative;
@@ -63,6 +64,7 @@ main{
 								background-repeat: no-repeat;
 								width: 1rem;
 								height: 1rem;
+								mix-blend-mode: multiply;
 							}
 						}
 					}
@@ -113,7 +115,8 @@ main{
 					color: #ffffff;
 					border: none;
 					font-size: $font-h2;
-					padding: 5px 30px;
+					padding: 10px 0;
+					width: 100%;
 					border-radius: $font-h2 / 3;
 				}
 			}
