[update] フォントサイズ変更，灰色を共有

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -34,7 +34,7 @@ header{
 
 main{
 	section.rule{
-		background: #f3f3f3;
+		background: $grey;
 		padding-top: $margin-def;
 		padding-bottom: $margin-def;
 		.row{
