--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,3 +1,7 @@
 $font-h2: 1.5rem;
-$font-def: 1.3rem;
+$font-def: 1.2rem;
+$font-sml: 0.9rem;
 $margin-def: 50px;
+$margin-half: 25px;
+
+$grey: #f3f3f3;
