--- a/src/pug/menu/index.pug
+++ b/src/pug/menu/index.pug
@@ -23,7 +23,10 @@ block content
 				.menu_name
 					h3 キウイとベリーのサマーカッサータ
 					.like
-						img(src=ROOT_PATH + "img/heart.svg", alt="")
+						
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 123 106" style="enable-background:new 0 0 123 106;" xml:space="preserve">
+							<path class="st0" d="M61.6,103.2C47.8,91.5,10.4,52.6,10.4,52.6c-11.9-11.9-9-31.2,3.3-42.3c11.9-10.7,39-11.8,47.9,8.6c8.1-20.4,39.1-19.3,50.8-8c10.8,10.4,9.6,33.2,1.2,41.7C89.4,76.8,80.6,85.2,61.6,103.2z"/>
+						</svg>
 				.menu_price ¥480
 				.menu_description
 					p 甘酸っぱいキウイと<br>ブルーベリーを合わせて<br>爽やかで夏らしいカッサータが<br> できました。
@@ -37,7 +40,9 @@ block content
 				.menu_name
 					h3 マフィン
 					.like
-						img(src=ROOT_PATH + "img/heart.svg", alt="")
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 123 106" style="enable-background:new 0 0 123 106;" xml:space="preserve">
+							<path class="st0" d="M61.6,103.2C47.8,91.5,10.4,52.6,10.4,52.6c-11.9-11.9-9-31.2,3.3-42.3c11.9-10.7,39-11.8,47.9,8.6c8.1-20.4,39.1-19.3,50.8-8c10.8,10.4,9.6,33.2,1.2,41.7C89.4,76.8,80.6,85.2,61.6,103.2z"/>
+						</svg>
 				.menu_price ¥480
 			.bar.col-12
 			section.menu.lg.col-12
@@ -46,7 +51,10 @@ block content
 				.menu_name
 					h3 キウイとベリーのサマーカッサータ
 					.like
-						img(src=ROOT_PATH + "img/heart.svg", alt="")
+						
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 123 106" style="enable-background:new 0 0 123 106;" xml:space="preserve">
+							<path class="st0" d="M61.6,103.2C47.8,91.5,10.4,52.6,10.4,52.6c-11.9-11.9-9-31.2,3.3-42.3c11.9-10.7,39-11.8,47.9,8.6c8.1-20.4,39.1-19.3,50.8-8c10.8,10.4,9.6,33.2,1.2,41.7C89.4,76.8,80.6,85.2,61.6,103.2z"/>
+						</svg>
 				.menu_price ¥480
 				.menu_description
 					p 甘酸っぱいキウイと<br>ブルーベリーを合わせて<br>爽やかで夏らしいカッサータが<br> できました。
@@ -61,7 +69,10 @@ block content
 				.menu_name
 					h3 マフィン
 					.like
-						img(src=ROOT_PATH + "img/heart.svg", alt="")
+						
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 123 106" style="enable-background:new 0 0 123 106;" xml:space="preserve">
+							<path class="st0" d="M61.6,103.2C47.8,91.5,10.4,52.6,10.4,52.6c-11.9-11.9-9-31.2,3.3-42.3c11.9-10.7,39-11.8,47.9,8.6c8.1-20.4,39.1-19.3,50.8-8c10.8,10.4,9.6,33.2,1.2,41.7C89.4,76.8,80.6,85.2,61.6,103.2z"/>
+						</svg>
 				.menu_price ¥480
 			section.menu.mid.col-6
 				figure.menu_img
@@ -69,7 +80,10 @@ block content
 				.menu_name
 					h3 マフィン
 					.like
-						img(src=ROOT_PATH + "img/heart.svg", alt="")
+						
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 123 106" style="enable-background:new 0 0 123 106;" xml:space="preserve">
+							<path class="st0" d="M61.6,103.2C47.8,91.5,10.4,52.6,10.4,52.6c-11.9-11.9-9-31.2,3.3-42.3c11.9-10.7,39-11.8,47.9,8.6c8.1-20.4,39.1-19.3,50.8-8c10.8,10.4,9.6,33.2,1.2,41.7C89.4,76.8,80.6,85.2,61.6,103.2z"/>
+						</svg>
 				.menu_price ¥480
 			.bar.col-12
 		section.cat.row
@@ -78,7 +92,10 @@ block content
 				.menu_name
 					h3 ハンドドリップコーヒー
 					.like
-						img(src=ROOT_PATH + "img/heart.svg", alt="")
+						
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 123 106" style="enable-background:new 0 0 123 106;" xml:space="preserve">
+							<path class="st0" d="M61.6,103.2C47.8,91.5,10.4,52.6,10.4,52.6c-11.9-11.9-9-31.2,3.3-42.3c11.9-10.7,39-11.8,47.9,8.6c8.1-20.4,39.1-19.3,50.8-8c10.8,10.4,9.6,33.2,1.2,41.7C89.4,76.8,80.6,85.2,61.6,103.2z"/>
+						</svg>
 				.menu_price ¥480
 			.bar.col-12
 			section.menu.mid.col-6
@@ -87,7 +104,10 @@ block content
 				.menu_name
 					h3 マフィン
 					.like
-						img(src=ROOT_PATH + "img/heart.svg", alt="")
+						
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 123 106" style="enable-background:new 0 0 123 106;" xml:space="preserve">
+							<path class="st0" d="M61.6,103.2C47.8,91.5,10.4,52.6,10.4,52.6c-11.9-11.9-9-31.2,3.3-42.3c11.9-10.7,39-11.8,47.9,8.6c8.1-20.4,39.1-19.3,50.8-8c10.8,10.4,9.6,33.2,1.2,41.7C89.4,76.8,80.6,85.2,61.6,103.2z"/>
+						</svg>
 				.menu_price ¥480
 			.bar.col-12
 			- for(var i = 0; i < 3; i++)
@@ -95,9 +115,12 @@ block content
 					.menu_name
 						h3 ハンドドリップコーヒー
 						.like
-							img(src=ROOT_PATH + "img/heart.svg", alt="")
+							
+						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"viewBox="0 0 123 106" style="enable-background:new 0 0 123 106;" xml:space="preserve">
+							<path class="st0" d="M61.6,103.2C47.8,91.5,10.4,52.6,10.4,52.6c-11.9-11.9-9-31.2,3.3-42.3c11.9-10.7,39-11.8,47.9,8.6c8.1-20.4,39.1-19.3,50.8-8c10.8,10.4,9.6,33.2,1.2,41.7C89.4,76.8,80.6,85.2,61.6,103.2z"/>
+						</svg>
 					.menu_price ¥480
 				.bar.col-12
 
-
 block script
+	include ../include/_script
