--- a/src/pug/_config.pug
+++ b/src/pug/_config.pug
@@ -1,4 +1,4 @@
-- var ROOT_PATH = 'https://artful.jp/staging-menu/front/';
+- var ROOT_PATH = '/'; //'https://artful.jp/staging-menu/front/';
 - var IMG_PATH = ROOT_PATH + 'img/';
 
 - 
@@ -10,4 +10,5 @@
 	var titles = {
 		home: "Don't Touch Menu",
 		menu: "Menu | Don't Touch Menu",
+		leave: "Leave | Don't Touch Menu",
 	}
