--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,6 +13,17 @@ block content
 			.row
 				h1.col-12
 					figure.logo: img(src=ROOT_PATH + "img/logo.jpg", alt="Don't Touch Menu")
+				section.time.col-12
+					dl.open_time
+						dt OPEN
+						dd 17:00
+					dl.close_time
+						dt CLOSE
+						dd 23:00
+					dl.last
+						dt ラストオーダー
+						dd 22:30
+					.exception 中休憩 18:00 ~ 20:00
 				section.seat_status.col-12
 					h2.col-12 現在の席状況
 					.status.col-12
