--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,14 @@ $margin-def: 50px;
 $margin-half: 25px;
 
 $grey: #f3f3f3;
+
+@mixin button($color){
+    margin: auto;
+    background: $color;
+    color: #ffffff;
+    border: none;
+    font-size: $font-h2;
+    padding: 10px 0;
+    width: 100%;
+    border-radius: $font-h2 / 3;
+}
