[add] public/menu，説明の改行対応

--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -91,6 +91,7 @@ main{
 			}
 			.menu_description{
 				font-size: $font-sml;
+				white-space: pre-wrap;
 				p{
 					margin-bottom: $margin-half;
 				}
