--- a/control/assets/css/common.css
+++ b/control/assets/css/common.css
@@ -167,6 +167,7 @@ select:focus {
 
 .update_index .tbl_item .tbl_update_index .tbl_row .item_name {
   text-align: center;
+  padding: 0 25px;
 }
 
 .update_index .tbl_item .tbl_update_index .tbl_row .enable {
@@ -261,18 +262,28 @@ select:focus {
   margin-top: -55px;
 }
 
-#btn_sort_cat.fixed {
+#btns_cat {
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+#btns_cat .btn {
+  margin: 0;
+}
+
+#btns_cat.fixed {
   position: fixed;
   top: 15px;
   left: 50%;
+  width: 100%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   z-index: 5;
+}
+
+#btns_cat.fixed * {
   -webkit-box-shadow: 0 0 5px #495057;
           box-shadow: 0 0 5px #495057;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
 }
 
 .btns {
